--- a/include/css/player.css
+++ b/include/css/player.css
@@ -91,32 +91,32 @@ footer {
   border-top-left-radius: 15px;
   transition: width 0.3s ease;
   display: flex;
-  justify-content: space-between; /* Séparer le contenu en deux parties : gauche et droite */
-  align-items: center; /* Centrer verticalement les éléments */
-  padding: 0 1rem; /* Ajouter un padding de chaque côté */
+  justify-content: space-between; 
+  align-items: center; 
+  padding: 0 1rem; 
   z-index: 999999;
 }
 
 footer a {
-  color: white; /* Couleur blanche pour les liens */
-  text-decoration: none; /* Enlever la décoration par défaut */
-  font-size: 1rem; /* Taille de police */
-  transition: color 0.3s ease; /* Transition fluide lors du survol */
+  color: white; 
+  text-decoration: none; 
+  font-size: 1rem; 
+  transition: color 0.3s ease; 
 }
 
 footer a:hover {
-  color: #22427C; /* Changer la couleur des liens au survol (optionnel) */
+  color: #22427C; 
 }
 
-footer .left-links { /* Classe pour les liens à gauche */
+footer .left-links { 
   display: flex;
-  justify-content: flex-start; /* Alignement à gauche */
-  gap: 2rem; /* Espacement entre les liens */
+  justify-content: flex-start; 
+  gap: 2rem; 
 }
 
-footer .right-buttons { /* Classe pour les boutons à droite */
+footer .right-buttons { 
   display: flex;
-  justify-content: flex-end; /* Alignement à droite */
+  justify-content: flex-end; 
 }
 
 footer a#fullscreen-btn,
@@ -124,7 +124,7 @@ footer a#share-btn {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 10px; /* Espace entre le texte et le logo */
+  gap: 10px; 
   padding: 0.5rem 1rem;
   cursor: pointer;
 }
@@ -137,8 +137,8 @@ footer a#share-btn:hover {
 
 #fullscreen-text,
 #share-text {
-  font-size: 10px; /* Taille du texte */
-  color: white;    /* Couleur du texte */
+  font-size: 10px; 
+  color: white;    
 }
 
 #fullscreen-icon,
@@ -147,12 +147,12 @@ footer a#share-btn:hover {
   height: auto;
   transition: transform 0.3s ease;
   margin: 0;
-  cursor: pointer; /* Assurer que l'icône est cliquable */
+  cursor: pointer; 
 }
 
 footer a#fullscreen-btn:hover #fullscreen-icon,
 footer a#share-btn:hover #share-icon {
-  transform: scale(1.1); /* Effet de zoom au survol */
+  transform: scale(1.1); 
 }
 
 .left-links a {
@@ -162,7 +162,7 @@ footer a#share-btn:hover #share-icon {
 footer #fullscreen-text,
 footer #share-text {
   opacity: 1;
-  transition: opacity 0.3s ease; /* Transition de l'opacité */
+  transition: opacity 0.3s ease; 
 }
 
 h3 a {
@@ -375,43 +375,38 @@ h3 a {
   transform: scale(1);
 }
 
-
-
 #credits-overlay {
   position: fixed;
   top: 0;
   right: 0;
   width: 50%;
   height: calc(100% - 3.4rem);
-  background-color: rgba(34, 66, 124, 0.4);  /* Fond semi-transparent */
+  background-color: rgba(34, 66, 124, 0.4);  
   z-index: 9999;
-  transform: translateX(100%); /* Positionné en dehors de l'écran à droite */
+  transform: translateX(100%); 
   transition: transform 0.3s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
   padding-top: 1rem;
   border-radius: 8px;
-  
-  /* Effet de flou pour les éléments derrière l'overlay */
-  backdrop-filter: blur(10px); /* Flouter l'arrière-plan */
-  -webkit-backdrop-filter: blur(10px); /* Safari (prend en charge l'effet de flou) */
-    overflow: auto; /* Ajouté ici */
-
+  backdrop-filter: blur(10px); 
+  -webkit-backdrop-filter: blur(10px); 
+  overflow: auto; 
 }
 
 #credits-overlay.open {
-  transform: translateX(0); /* Quand ouvert, l'overlay se déplace en position visible */
+  transform: translateX(0); 
 }
 
 .overlay-content {
   padding: 2rem;
   color: black;
   width: 100%;
-  height: 100%;  /* Prendre toute la hauteur disponible */
+  height: 100%;  
   display: flex;
-  flex-direction: column;  /* Organiser le contenu en colonne */
-  justify-content: space-between;  /* Espacer le contenu de manière uniforme */
+  flex-direction: column;  
+  justify-content: space-between;  
 }
 
 #credits-overlay h2 {
@@ -426,8 +421,8 @@ h3 a {
   border-radius: 5px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  align-self: center; /* Centrer horizontalement */
-  margin-top: 2rem; /* Pousser le bouton vers le bas */
+  align-self: center; 
+  margin-top: 2rem; 
   margin-bottom: 1rem;
   z-index: 2;
 }
@@ -444,14 +439,14 @@ h3 a {
 
 #logos-container {
   display: flex;
-  justify-content: center; /* Centrer les logos horizontalement */
+  justify-content: center; 
   align-items: center;
       gap: 50px;
 margin-top: 2vh;
 }
 
 #logos-container img {
-  height: 50px; /* Taille uniforme pour les logos */
+  height: 50px; 
   width: auto;
   transition: height 0.3s ease;
 }
@@ -513,6 +508,10 @@ margin-top: 2vh;
 
 @media (max-width: 1120px) {
 
+
+
+
+
   /* Ajuster la taille et la position des séquences a modifier */
   #element_F0BFE707-FE80-D494-2C21-35EA24A2292A,
   #element_A1DDDACE-DA19-ECEB-50E0-3618375EDADB,
@@ -531,10 +530,10 @@ margin-top: 2vh;
     width: 500px;
     height: 281px;
   }
+  /*=============================================================*/
 
 
 
-  /* Ajuster la taille et le comportement du bouton LinkedIn */
 
   .linkedin-container img {
     animation: none;
@@ -567,7 +566,6 @@ margin-top: 2vh;
     transition: none;
   }
 
-
   #logos-container {
     gap: 1.2rem;
   }
@@ -576,13 +574,11 @@ margin-top: 2vh;
     height: 40px; 
   }
 
-  
 }
 
 
 @media (max-width: 800px) {
 
-  /* Header adjustments */
   header {
     justify-content: flex-start;
   }
@@ -607,10 +603,6 @@ margin-top: 2vh;
     text-align: left;
   }
 
-
-
-
-  /* Footer adjustments */
   #fullscreen-text {
     display: none;  
   }
@@ -641,9 +633,6 @@ margin-top: 2vh;
     display: block; 
   }
 
-
-
-  /* Catégories adjustments */
   .boutton {
     margin-bottom: 0.7rem;
   }
@@ -696,7 +685,6 @@ margin-top: 2vh;
     background: none;
   }
 
-  /* Style pour la page active sur mobile */
   .content.active-page {
     background: rgba(34, 66, 124, 0.2);
     font-weight: bold;
@@ -708,6 +696,7 @@ margin-top: 2vh;
     color: rgba(34, 66, 124, 1);
     font-weight: bold;
   }
+
 
 
 
@@ -732,63 +721,55 @@ margin-top: 2vh;
     width: 480px;
     height: 270px;
   }
+  /*==============================================================*/
 
 
 
 
-  /* Social Media LinkedIn adjustments */
   .social-media {
     top: 1.7rem;
     right: 0rem;
   }
 
-
-
-  /* Pour l'overlay qui s'ouvre depuis la droite */
   #credits-overlay {
     top: 0;
     right: 0;
     bottom: 40px;
     left: auto;
     width: 100%;
-    transform: translateX(100%);  /* Caché à droite par défaut */
+    transform: translateX(100%);  
   }
   
   #credits-overlay.open {
-    transform: translateX(0);  /* Visible quand ouvert */
+    transform: translateX(0);  
   }
 
-  /* Ajuster la position des logos et du bouton en bas */
   #logos-container {
-    flex-direction: row; /* Assurer que les logos sont bien alignés en ligne */
-    justify-content: center;  /* Centrer les logos */
-    gap: 20px;  /* Espacement entre les logos */
-    margin-top: auto;  /* Placer les logos en bas */
+    flex-direction: row; 
+    justify-content: center;  
+    gap: 20px;  
+    margin-top: auto;  
   }
 
   #close-overlay {
-    margin-top: 1rem; /* Un peu d'espace avant le bouton */
+    margin-top: 1rem; 
   }
 
-  /* Ajuster la taille des logos pour l'écran mobile */
   #logos-container img {
-    height: 40px;  /* Ajuster la taille des logos */
+    height: 40px;  
   }
 
-  /* Ajuster la taille du texte et du bouton */
   #close-overlay {
-    font-size: 0.9rem;  /* Réduire la taille du texte du bouton */
+    font-size: 0.9rem;  
   }
 
   .overlay-content h2 {
-    font-size: 1rem;  /* Réduire la taille du titre */
+    font-size: 1rem;  
   }
 
   .overlay-content p, .overlay-content a {
-    font-size: 0.8rem;  /* Réduire la taille du texte et des liens */
+    font-size: 0.8rem;  
   }
-
-
 
 }
 
