--- a/include/css/player.css
+++ b/include/css/player.css
@@ -85,7 +85,7 @@ a {
 footer {
   width: 50rem;
   height: 2.3rem;
-  background: rgba(34, 66, 124, 0.4);
+  background: #8599b5;
   position: absolute;
   right: 0;
   bottom: 0;
