--- a/include/css/player.css
+++ b/include/css/player.css
@@ -399,9 +399,16 @@ footer a#share-btn:hover #share-icon {
 
 @media (max-width: 955px) {
 
-  body {
+html {
     overflow-y: auto !important;
     overflow-x: hidden !important;
+  }
+
+  body {
+     overflow-y: auto !important;
+    overflow-x: hidden !important;
+    min-height: 100vh;
+    position: relative;
   }
   
   header {
@@ -438,6 +445,7 @@ footer a#share-btn:hover #share-icon {
 
   footer {
     width: 30rem; 
+    bottom: 0;
   }
 
   footer a#fullscreen-btn,
