--- a/include/css/player.css
+++ b/include/css/player.css
@@ -405,10 +405,11 @@ html {
   }
 
   body {
-     overflow-y: auto !important;
+    overflow-y: auto !important;
     overflow-x: hidden !important;
     min-height: 100vh;
     position: relative;
+    padding-bottom: 6rem;
   }
   
   header {
