--- a/include/css/player.css
+++ b/include/css/player.css
@@ -353,7 +353,108 @@ footer a#share-btn:hover #share-icon {
 
 
 /* =========================
-   MEDIA QUERIES
+   MEDIA QUERIES - GRANDS ÉCRANS
+  ========================= */
+
+@media (min-width: 1920px) {
+  h1 {
+    font-size: 2.5rem;
+  }
+
+  h2 {
+    font-size: 1.1rem;
+  }
+
+  .catégories {
+    left: 18rem;
+  }
+
+  .cercle {
+    width: 60px;
+    height: 60px;
+  }
+
+  .content {
+    width: 18rem;
+    height: 2.5rem;
+  }
+
+  footer {
+    width: 60rem;
+    height: 2.8rem;
+  }
+
+  footer .left-links a,
+  #fullscreen-text,
+  #share-text {
+    font-size: 12px;
+  }
+
+  .linkedin-container img {
+    width: 5rem;
+    height: 5rem;
+  }
+
+  .linkedin-text {
+    font-size: 1.4rem;
+  }
+}
+
+@media (min-width: 2560px) {
+  h1 {
+    font-size: 3rem;
+  }
+
+  h2 {
+    font-size: 1.3rem;
+  }
+
+  .catégories {
+    left: 22rem;
+  }
+
+  .cercle {
+    width: 70px;
+    height: 70px;
+  }
+
+  .content {
+    width: 22rem;
+    height: 3rem;
+  }
+
+  footer {
+    width: 70rem;
+    height: 3.3rem;
+  }
+
+  footer .left-links a,
+  #fullscreen-text,
+  #share-text {
+    font-size: 14px;
+  }
+
+  .linkedin-container img {
+    width: 6rem;
+    height: 6rem;
+  }
+
+  .linkedin-text {
+    font-size: 1.6rem;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+/* =========================
+   MEDIA QUERIES - PETITS ÉCRANS
   ========================= */
 
 @media (max-width: 1120px) {
