--- a/include/css/player.css
+++ b/include/css/player.css
@@ -500,7 +500,7 @@ footer a#share-btn:hover #share-icon {
 
 @media (max-width: 955px) {
 
-html {
+  html {
     overflow-y: auto !important;
     overflow-x: hidden !important;
   }
@@ -511,6 +511,7 @@ html {
     min-height: 100vh;
     position: relative;
     padding-bottom: 6rem;
+    margin-bottom: 0;
   }
   
   header {
@@ -547,7 +548,10 @@ html {
 
   footer {
     width: 30rem; 
+    position: fixed;
     bottom: 0;
+    right: 0;
+    margin: 0;
   }
 
   footer a#fullscreen-btn,
@@ -561,6 +565,12 @@ html {
   #share-text {
     display: none; 
     opacity: 0;  
+  }
+  
+  #fullscreen-icon,
+  #share-icon {
+    width: 1rem;
+    height: auto;
   }
 
   .catégories {
