--- a/include/css/player.css
+++ b/include/css/player.css
@@ -510,6 +510,7 @@ html {
     overflow-x: hidden !important;
     min-height: 100vh;
     position: relative;
+    padding-bottom: 3.5rem;
   }
   
   header {
