--- a/include/css/sitemap.css
+++ b/include/css/sitemap.css
@@ -58,9 +58,9 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: repeat(2, 1fr);
-  gap: 1.5rem;
+  gap: 2rem;
   margin-bottom: 1.5rem;
-  padding: 1rem;
+  padding: 0;
   max-width: 700px;
   margin-left: auto;
   margin-right: auto;
@@ -212,8 +212,7 @@
   .sitemap-grid {
     grid-template-columns: 1fr;
     grid-template-rows: auto;
-    gap: 1.5rem;
-    max-width: 180px;
+    gap: 0.8rem;
     margin-bottom: 1rem;
   }
 
