--- a/include/css/player.css
+++ b/include/css/player.css
@@ -506,12 +506,17 @@ html {
   }
 
   body {
-    overflow-y: auto !important;
-    overflow-x: hidden !important;
-    min-height: 100vh;
-    position: relative;
-    padding-bottom: 6rem;
+    display: flex;
+    flex-direction: column;
+    overflow-y: auto;
+    overflow-x: hidden;
+    
   }
+
+  .catégories {
+  flex: 1;
+}
+
   
   header {
     justify-content: flex-start;
