--- a/include/css/player.css
+++ b/include/css/player.css
@@ -546,7 +546,10 @@ html {
 
   footer {
     width: 30rem; 
-    position: fixed;
+    position: relative;
+    margin-bottom: 0;
+    padding-bottom: 0;
+    bottom: 0;
   }
 
   footer a#fullscreen-btn,
