--- a/include/css/player.css
+++ b/include/css/player.css
@@ -569,7 +569,7 @@ html {
     top: 0%;
     left: 0%;
     padding: 0;
-    margin-top: 2rem;
+    margin-top: 0rem;
   }
 
   .boutton {
@@ -621,8 +621,7 @@ html {
   }
 
   .social-media {
-    top: 1.7rem;
-    right: 0rem;
+    display: none;
   }
 
 }
