--- a/include/css/search.css
+++ b/include/css/search.css
@@ -104,7 +104,7 @@ body > .video-section {
 
 .search-result-subtitle {
   font-size: 12px;
-  color: #999;
+  color: black;
   font-weight: 500;
 }
 
